--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
+    "npm": "^11.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
